# fullstack-auth-posts

./: .gitignore  .pre-commit-config.yaml  README.md  add_app.sh  docker-compose.django-celery.yaml  docker-compose.tests.yaml  docker-compose.yaml  docker-django-celery.yaml  docker-react.yaml  reset_migrations.sh
.envs/: django.env  email.env  postgres.env  react.env  tests.env
.github/workflows/: back.yaml  coverage.yaml  front.yaml
commands/dev/: django_add_app.sh  django_app_migration.sh  django_loaddata.sh  django_pre_check.sh  django_pytest.sh  django_reinstall.sh  django_reset_migrations.sh  django_run_script.sh  django_shell.sh  django_squash_migrations.sh  fullstack-pre-commit.sh
core/: .coveragerc  .dockerignore  .gitignore  appmap.yml  isort.cfg  mypy.ini  pyproject.toml  pytest.ini
core/apps/api/: auth.py  middleware.py  permissions.py  tokens.py
core/apps/auth/: schema.py  serializers.py  urls.py  utils.py  views.py
core/apps/emails/: tasks.py  utils.py
core/apps/files/: fields.py  services.py
core/apps/users/: apps.py  filters.py  models.py  permissions.py  schema.py  signals.py  tasks.py  types.py  urls.py  utils.py
core/apps/users/admin/: __init__.py  admin.py  admin_forms.py  admin_models.py  admin_panels.py
core/apps/users/fixtures/: roles.yaml
core/apps/users/management/commands/: make_user_models.py
core/apps/users/managers/: __init__.py  friends_managers.py  repository.py  roles_managers.py  services.py  user_manager.py  users_managers.py
core/apps/users/migrations/: 0001_initial.py  0002_alter_friendship_unique_together.py  0002_user_username.py
core/apps/users/models/: __init__.py  abstract_models.py  accounts.py  authorizations.py  emails.py  friends.py  friends_models.py  roles_models.py  users.py  users_models.py
core/apps/users/serializers/: __init__.py  authorizations.py  friends_serializer.py  friends_serializers.py  roles_serializer.py  roles_serializers.py  serializer.py  users_serializer.py  users_serializers.py
core/apps/users/signals/: __init__.py  globals.py  intervals.py
core/apps/users/tests/: test_client.py
core/apps/users/views/: __init__.py  auth.py  friends_views.py  roles_views.py  users.py  users_views.py
core/config/: celery.py  env.py  redis.py  schemas.py  settings.py  urls.py
core/config/settings/: base.py  dev.py  prod.py  testing.py
core/docker/: Dockerfile  django.sh  entrypoint.sh
core/docker/celery/: beat.sh  flower.sh  worker.sh
core/docker/debug/: pre_django.sh
core/fixtures/: roles.json  users.json  users_basic.json  users_premium.json
core/schemas/: auth.json  login_view.json  register_mail_view.json  register_view.json
core/scripts/: my_scripts.py
core/templates/emails/login/: refresh.html
core/templates/emails/register/: register.css  register.html
core/tests/: conftest.py
core/tests/users/: conftest.py  factories.py  test_models.py  test_users.py  test_views.py
frontend/: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.docker.config.ts
frontend/docker/: Dockerfile
frontend/src/: App.css  App.test.tsx  App.tsx  Router.tsx  main.tsx  vite-env.d.ts
frontend/src/app/: axiosBaseQuery.tsx  store.tsx
frontend/src/app/api/: apiSlice.tsx  apiState.tsx  index.tsx
frontend/src/app/axios/: axiosService.ts
frontend/src/app/hooks/: index.tsx
frontend/src/app/reducers/: postsReducers.tsx
frontend/src/app/services/: api.tsx  authAPI.tsx  index.tsx  postsAPI.tsx  tagsAPI.tsx
frontend/src/app/state/: posts.tsx
frontend/src/components/: Footer.tsx  FormatDate.tsx  Header.tsx  Main.tsx  MainLeft.tsx  MainLeftTop.tsx  MainRight.tsx  MaxTextCard.tsx  NavMenu.tsx  PaginationPosts.tsx  TabPanel.tsx  TabsScroll.tsx  global.css
frontend/src/components/footer/: Footer.tsx
frontend/src/components/header/: Header.tsx  NavMenu.tsx  SearchBar.tsx
frontend/src/components/main/: MainLeft.tsx  MainRight.tsx
frontend/src/constants/: api.tsx  post.tsx  posts.tsx
frontend/src/data/: routes.json  temp.json
frontend/src/dev/: palette.tsx  previews.tsx  useInitial.ts
frontend/src/features/auth/: authSlice.tsx
frontend/src/hooks/: routes.json  temp.json  useFetch.tsx
frontend/src/pages/Login/: Login.tsx
frontend/src/pages/Posts/: Post.tsx  PostCard.tsx  PostCreate.tsx  PostDetail.tsx  Posts.tsx
frontend/src/pages/Tags/: CreateTagForm.tsx  DeleteTagForm.tsx  (+4 more)
frontend/src/tests/: MainRight.test.tsx  example.test.tsx
frontend/src/types/: data.tsx  index.tsx  postTypes.tsx  userTypes.tsx
frontend/src/utils/: createUniqueIdsToEnd.tsx
(+51 files in other folders)
