[tool.poetry]
name = "fullstack-auth-posts"
version = "0.1.0"
description = ""
authors = ["radthenone <krzyzak.codes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
