[tool.poetry]
name = "fullstack-auth-posts"
version = "0.1.0"
description = ""
authors = ["radthenone <krzyzak.codes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
django-cors-headers = "^4.0.0"
django-extensions = "^3.2.3"
pre-commit = "^3.3.2"
celery = "^5.3.0"
redis = "^4.5.5"
flower = "^1.2.0"
django-celery-beat = "^2.5.0"
django-filter = "^23.2"
watchfiles = "^0.19.0"
werkzeug = "^2.3.4"
pillow = "^9.5.0"
argon2-cffi = "^21.3.0"
django-redis = "^5.3.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
django-stubs = "^4.2.1"
black = "^23.3.0"
factory-boy = "^3.2.1"
faker = "^16.6.1"
flake8 = "^5.0.4"
flake8-django = "^1.1.5"
isort = "^5.12.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
coverage = "^7.2.7"
django-silk = "^5.0.3"
python-json-logger = "^2.0.7"
ruff = "^0.0.277"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "I", # isort
    "C",
    "E",
    "F",
    "W",
    "DJ",
]
ignore = ["DJ01"]
unfixable = []
line-length = 88
exclude = [
    "manage.py",
    ".git",
    "*/migrations/*",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
    "venv",
    ".venv",
    "*/config/*"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"./manage.py" = ["INP001"]

[tool.ruff.isort]
known-third-party = [
    "django",
    "rest-framework",
    "celery",
    "redis",
    "flower",
    "django-celery-beat",
    "django-filter",
    "django-extensions",
    "django-stubs",
    "factory-boy",
    "faker",
]
